[package]
name = "rtipc"
version = "0.0.1"
edition = "2024"
readme = "README.md"
homepage = "https://github.com/mausys/rtipc"
repository = "https://github.com/mausys/rtipc"
license = "MIT OR Apache-2.0"
keywords = ["ipc", "linux", "real-time"]
categories = ["concurrency"]

[dependencies]
nix = { version = "0.30.1", features = ["fs", "mman", "feature"] }
cache-size = {version = "0.7.0"}
log = {version = "0.4"}



